@@ -38,6 +38,8 @@
 <p>2016-03-19  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/psd.c (ReadPSDImage): Fix SourceForge bug #341
+&quot;out-of-bounds read in coders/psd.c:1435&quot;.</li>
 <li>coders/xcf.c (load_tile): Fix SourceForge bug #337
 &quot;heap-buffer-overflow in coders/xcf.c:373&quot;.</li>
 <li>coders/pict.c (WritePICTImage): Fix SourceForge bug #340
